# UvcCast

./: LICENSE  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/org/jayhsu/uvccast/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/org/jayhsu/uvccast/: MainActivity.kt
app/src/main/java/org/jayhsu/uvccast/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/org/jayhsu/uvccast/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
nativelib/: build.gradle.kts
nativelib/src/androidTest/java/org/jayhsu/nativelib/: ExampleInstrumentedTest.kt
nativelib/src/main/cpp/: CMakeLists.txt  nativelib.cpp
nativelib/src/main/java/org/jayhsu/nativelib/: NativeLib.kt
nativelib/src/test/java/org/jayhsu/nativelib/: ExampleUnitTest.kt
